--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jessiezhang2017.github.io/new_site/",
   "dependencies": {
     "bootstrap": "^4.2.1",
     "bootswatch": "^4.2.1",
@@ -17,6 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
